fix: icon and css scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -384,3 +384,51 @@ p {
   content: "·";
   display: inline-block;
 }
+
+/* SCROLL BAR */
+:root {
+  --primary: white;
+  --secondary: #4492ff;
+}
+.dark:root {
+  --primary: black;
+  --secondary: #0b5dd1;
+}
+
+/* Scrollbar styles */
+
+/* Firefox */
+* {
+  scrollbar-width: thin;
+  scrollbar-color: var(--primary) var(--secondary);
+}
+
+/* Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+  width: 12px;
+}
+
+*::-webkit-scrollbar-track {
+  background: var(--primary);
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: var(--secondary);
+/*   background: repeating-linear-gradient(
+    45deg,
+    var(--secondary),
+    var(--secondary) 5px,
+    var(--primary) 5px,
+    var(--primary) 10px
+  ); */
+  border-radius: 20px;
+  border: 3px solid var(--primary);
+}
+
+section {
+  margin:
+ 0 auto;
+  max-width: 50vw;
+  height: 60vh;
+  overflow-y: scroll;
+}
